Correctly alter visibility of toolbar with CSS classes. Use fontawesome icons.

--- a/style.css
+++ b/style.css
@@ -96,13 +96,18 @@ ul > li::marker{
   background: #ffffff;
   
   border-radius: 0.28rem;
+  padding: 0px 1.5ch;
 }
 
-#editor-toolbar .visible{
-  display: block;
+#editor-toolbar.visible{
+  /*display: block;*/
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-#editor-toolbar .invisible{
+#editor-toolbar.invisible{
   display: none;
 }
 
